added extension dependency resolver using multiple classloaders to prevent errors