@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2010-2024. Institut Pasteur.
+ * Copyright (c) 2010-2025. Institut Pasteur.
  *
  * This file is part of Icy.
  * Icy is free software: you can redistribute it and/or modify
@@ -15,12 +15,11 @@
  * You should have received a copy of the GNU General Public License
  * along with Icy. If not, see <https://www.gnu.org/licenses/>.
  */
+
 package org.bioimageanalysis.icy.network.search;
 
+import org.bioimageanalysis.icy.extension.ExtensionLoader;
 import org.bioimageanalysis.icy.extension.plugin.PluginDescriptor;
-import org.bioimageanalysis.icy.extension.plugin.PluginLoader;
-import org.bioimageanalysis.icy.extension.plugin.PluginLoader.PluginLoaderEvent;
-import org.bioimageanalysis.icy.extension.plugin.PluginLoader.PluginLoaderListener;
 import org.bioimageanalysis.icy.extension.plugin.interface_.PluginSearchProvider;
 import org.bioimageanalysis.icy.system.IcyExceptionHandler;
 import org.bioimageanalysis.icy.system.thread.ThreadUtil;
@@ -31,76 +30,72 @@ import java.util.List;
 
 /**
  * SearchEngine for Icy.
- * 
- * @author Stephane
+ *
+ * @author Stephane Dallongeville
+ * @author Thomas Musset
  */
-public class SearchEngine implements SearchResultConsumer, PluginLoaderListener
-{
-    public interface SearchEngineListener
-    {
-        public void resultChanged(SearchEngine source, SearchResult result);
+public class SearchEngine implements SearchResultConsumer, ExtensionLoader.ExtensionLoaderListener {
+    public interface SearchEngineListener {
+        void resultChanged(SearchEngine source, SearchResult result);
 
-        public void resultsChanged(SearchEngine source);
+        void resultsChanged(SearchEngine source);
 
-        public void searchStarted(SearchEngine source);
+        void searchStarted(SearchEngine source);
 
-        public void searchCompleted(SearchEngine source);
+        void searchCompleted(SearchEngine source);
     }
 
-    /** Search result producer list */
+    /**
+     * Search result producer list
+     */
     final ArrayList<SearchResultProducer> producers;
 
-    /** Listener list */
+    /**
+     * Listener list
+     */
     private final List<SearchEngineListener> listeners;
 
-    /** Internals */
+    /**
+     * Internals
+     */
     final Runnable searchProviderSetter;
     String lastSearch;
 
-    public SearchEngine()
-    {
+    public SearchEngine() {
         super();
 
-        producers = new ArrayList<SearchResultProducer>();
-        listeners = new ArrayList<SearchEngineListener>();
+        producers = new ArrayList<>();
+        listeners = new ArrayList<>();
         lastSearch = "";
 
-        searchProviderSetter = new Runnable()
-        {
+        searchProviderSetter = new Runnable() {
             @Override
-            public void run()
-            {
+            public void run() {
                 final String savedSearch = lastSearch;
 
                 // cancel current search
                 cancelSearch();
 
-                synchronized (producers)
-                {
+                synchronized (producers) {
                     producers.clear();
                 }
 
                 // get search providers from plugin
-                for (PluginDescriptor plugin : PluginLoader.getPlugins(PluginSearchProvider.class))
-                {
-                    try
-                    {
-                        final PluginSearchProvider psp = (PluginSearchProvider) plugin.getPluginClass().newInstance();
-                        final SearchResultProducer producer = psp.getSearchProviderClass().newInstance();
+                for (final PluginDescriptor plugin : ExtensionLoader.getPlugins(PluginSearchProvider.class)) {
+                    try {
+                        final PluginSearchProvider psp = (PluginSearchProvider) plugin.getPluginClass().getDeclaredConstructor().newInstance();
+                        final SearchResultProducer producer = psp.getSearchProviderClass().getDeclaredConstructor().newInstance();
 
-                        synchronized (producers)
-                        {
+                        synchronized (producers) {
                             producers.add(producer);
                         }
                     }
-                    catch (Throwable t)
-                    {
+                    catch (final Throwable t) {
                         IcyExceptionHandler.handleException(plugin, t, true);
                     }
                 }
 
-                synchronized (producers)
-                {
+                synchronized (producers) {
                     Collections.sort(producers);
                 }
 
@@ -109,41 +104,37 @@ public class SearchEngine implements SearchResultConsumer, PluginLoaderListener
             }
         };
 
-        PluginLoader.addListener(this);
+        ExtensionLoader.addListener(this);
 
         updateSearchProducers();
     }
 
-    private void updateSearchProducers()
-    {
+    private void updateSearchProducers() {
         ThreadUtil.runSingle(searchProviderSetter);
     }
 
     /**
      * Cancel the previous search request
      */
-    public void cancelSearch()
-    {
+    public void cancelSearch() {
         search("");
     }
 
     /**
      * Performs the search request, mostly build the search result list.<br>
      * Previous search is automatically canceled and replaced by the new one.
-     * 
-     * @param text
-     *        Text used for the search request, it can contains several words and use operators.<br>
-     *        Examples:<br>
-     *        <ul>
-     *        <li><i>spot detector</i> : any of word should be present</li>
-     *        <li><i>+spot +detector</i> : both words should be present</li>
-     *        <li><i>"spot detector"</i> : the exact expression should be present</li>
-     *        <li><i>+"spot detector" -tracking</i> : <i>spot detector</i> should be present and <i>tracking</i> absent</li>
-     *        </ul>
+     *
+     * @param text Text used for the search request, it can contains several words and use operators.<br>
+     *             Examples:<br>
+     *             <ul>
+     *             <li><i>spot detector</i> : any of word should be present</li>
+     *             <li><i>+spot +detector</i> : both words should be present</li>
+     *             <li><i>"spot detector"</i> : the exact expression should be present</li>
+     *             <li><i>+"spot detector" -tracking</i> : <i>spot detector</i> should be present and <i>tracking</i> absent</li>
+     *             </ul>
      * @see #cancelSearch()
      */
-    public void search(String text)
-    {
+    public void search(final String text) {
         // save search string
         lastSearch = text;
 
@@ -151,9 +142,8 @@ public class SearchEngine implements SearchResultConsumer, PluginLoaderListener
         fireSearchStartedEvent();
 
         // launch new search
-        synchronized (producers)
-        {
-            for (SearchResultProducer producer : producers)
+        synchronized (producers) {
+            for (final SearchResultProducer producer : producers)
                 producer.search(text, this);
         }
     }
@@ -161,24 +151,20 @@ public class SearchEngine implements SearchResultConsumer, PluginLoaderListener
     /**
      * Returns {@link SearchResultProducer} attached to the search engine.
      */
-    public List<SearchResultProducer> getSearchResultProducers()
-    {
-        synchronized (producers)
-        {
-            return new ArrayList<SearchResultProducer>(producers);
+    public List<SearchResultProducer> getSearchResultProducers() {
+        synchronized (producers) {
+            return new ArrayList<>(producers);
         }
     }
 
     /**
      * Returns the number of currently producer processing a search request.
      */
-    public int getSearchingProducerCount()
-    {
+    public int getSearchingProducerCount() {
         int result = 0;
 
-        synchronized (producers)
-        {
-            for (SearchResultProducer producer : producers)
+        synchronized (producers) {
+            for (final SearchResultProducer producer : producers)
                 if (producer.isSearching())
                     result++;
         }
@@ -189,11 +175,9 @@ public class SearchEngine implements SearchResultConsumer, PluginLoaderListener
     /**
      * Returns true if the search engine is currently processing a search request.
      */
-    public boolean isSearching()
-    {
-        synchronized (producers)
-        {
-            for (SearchResultProducer producer : producers)
+    public boolean isSearching() {
+        synchronized (producers) {
+            for (final SearchResultProducer producer : producers)
                 if (producer.isSearching())
                     return true;
         }
@@ -245,16 +229,14 @@ public class SearchEngine implements SearchResultConsumer, PluginLoaderListener
     /**
      * Returns the last search text.
      */
-    public String getLastSearch()
-    {
+    public String getLastSearch() {
         return lastSearch;
     }
 
     /**
      * Returns SearchResult at specified index.
      */
-    public SearchResult getResult(int index)
-    {
+    public SearchResult getResult(final int index) {
         final List<SearchResult> results = getResults();
 
         if ((index >= 0) && (index < results.size()))
@@ -266,19 +248,15 @@ public class SearchEngine implements SearchResultConsumer, PluginLoaderListener
     /**
      * Return all current results from all {@link SearchResultProducer}.
      */
-    public List<SearchResult> getResults()
-    {
+    public List<SearchResult> getResults() {
         final List<SearchResult> results = new ArrayList<SearchResult>();
 
-        synchronized (producers)
-        {
-            for (SearchResultProducer producer : producers)
-            {
+        synchronized (producers) {
+            for (final SearchResultProducer producer : producers) {
                 final List<SearchResult> producerResults = producer.getResults();
 
                 // prevent modification of results while adding it
-                synchronized (producerResults)
-                {
+                synchronized (producerResults) {
                     // sort producer results
                     Collections.sort(producerResults);
                     // and add
@@ -291,80 +269,66 @@ public class SearchEngine implements SearchResultConsumer, PluginLoaderListener
     }
 
     @Override
-    public void pluginLoaderChanged(PluginLoaderEvent e)
-    {
+    public void extensionLoaderChanged(final ExtensionLoader.ExtensionLoaderEvent e) {
         // refresh producer list
         updateSearchProducers();
     }
 
     @Override
-    public void resultChanged(SearchResultProducer producer, SearchResult result)
-    {
+    public void resultChanged(final SearchResultProducer producer, final SearchResult result) {
         // notify listeners about results change
         fireResultChangedEvent(result);
     }
 
     @Override
-    public void resultsChanged(SearchResultProducer producer)
-    {
+    public void resultsChanged(final SearchResultProducer producer) {
         // notify listeners about results change
         fireResultsChangedEvent();
     }
 
     @Override
-    public void searchCompleted(SearchResultProducer producer)
-    {
+    public void searchCompleted(final SearchResultProducer producer) {
         // last producer search completed ? --> notify listeners about it
         if (getSearchingProducerCount() == 1)
             fireSearchCompletedEvent();
     }
 
-    public List<SearchEngineListener> getListeners()
-    {
-        synchronized (listeners)
-        {
+    public List<SearchEngineListener> getListeners() {
+        synchronized (listeners) {
             return new ArrayList<SearchEngineListener>(listeners);
         }
     }
 
-    public void addListener(SearchEngineListener listener)
-    {
-        synchronized (listener)
-        {
+    public void addListener(final SearchEngineListener listener) {
+        synchronized (listener) {
             if (!listeners.contains(listener))
                 listeners.add(listener);
         }
     }
 
-    public void removeListener(SearchEngineListener listener)
-    {
-        synchronized (listener)
-        {
+    public void removeListener(final SearchEngineListener listener) {
+        synchronized (listener) {
             listeners.remove(listener);
         }
     }
 
-    protected void fireResultChangedEvent(SearchResult result)
-    {
-        for (SearchEngineListener listener : getListeners())
+    protected void fireResultChangedEvent(final SearchResult result) {
+        for (final SearchEngineListener listener : getListeners())
             listener.resultChanged(this, result);
     }
 
-    protected void fireResultsChangedEvent()
-    {
-        for (SearchEngineListener listener : getListeners())
+    protected void fireResultsChangedEvent() {
+        for (final SearchEngineListener listener : getListeners())
             listener.resultsChanged(this);
     }
 
-    protected void fireSearchStartedEvent()
-    {
-        for (SearchEngineListener listener : getListeners())
+    protected void fireSearchStartedEvent() {
+        for (final SearchEngineListener listener : getListeners())
             listener.searchStarted(this);
     }
 
-    protected void fireSearchCompletedEvent()
-    {
-        for (SearchEngineListener listener : getListeners())
+    protected void fireSearchCompletedEvent() {
+        for (final SearchEngineListener listener : getListeners())
             listener.searchCompleted(this);
     }
 }
